2008-04-29  Akhil Laddha  <lakhil@novell.com>

	** Fix for bug #529660

	* main.c (show_development_warning): Change stable version to 2.22.1

2008-04-26  James Westby  <jw+debian@jameswestby.net>

	** Fix for bug #518103

	* e-shell-nm-glib.c: (e_shell_glib_network_monitor):
	* e-shell-nm.c: (e_shell_network_monitor):
	* e-shell.c: (e_shell_construct):
	Check online status from NetworkManager at startup instead of using the
	last-used-state.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* e-shell-window-commands.c: (command_quick_reference):
	Use gio instead of gnome-vfs.

2008-04-07  Ondrej Jirman  <megous@megous.com>

	** Fix for bug #525238

	* e-shell-window.c: (switch_view):
	* es-event.c:
	* es-event.h:
	Add new "component.activated" event. Event is emitted whenever
	component is activated. ESEventTargetComponent contains an id
	of the component being activated.

2008-03-25  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Added configurable Proxy settings for Evolution.

	* apps_evolution_shell.schemas.in:

2008-03-03  Tor Lillqvist  <tml@novell.com>

	* main.c (main) [Win32]: Drop the call to gtk_rc_parse_string() to
	set gtk-fallback-icon-theme = "gnome". Instead just bundle a
	suitable gtkrc with Evolution. And actually what we want to get
	Tango icons seems to be gtk-fallback-icon-theme = "Tango", and no
	mention of the gnome icon theme at all in gtkrc. (It is still
	used, though.)

2008-03-03  Tor Lillqvist  <tml@novell.com>

	* main.c: On Windows, set PATH to include Evolution's "bin" folder
	and the "lib/evolution/$(BASE_VERSION)/components" folder. Set
	BONOBO_ACTIVATION_PATH to the "lib/bonobo/servers" folder

2008-03-03  Johnny Jacob  <jjohnny@novell.com>

	* e-shell-window-commands.c (authors): Missed '"' :-) .
	
2008-03-03  Johnny Jacob  <jjohnny@novell.com>

	* e-shell-window-commands.c (authors): Updated contributors list.

2008-03-02  Srinivasa Ragavan  <sragavan@novell.com>
